--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </style>
 </head>
 <body>
-    <audio autoplay loop>
+    <audio controls>
         <source src="POUR ELLE.mp3" type="audio/mp3"> <!-- Ensure MP3 file is correctly referenced -->
     </audio>
     
