--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
 <body>
     <h1>Hey Love, I'm Sorry!</h1>
     <img src="heart.png" alt="Heart">
-    <p>Click the button to hear my apology and see my message.</p>
-    <button onclick="playAudio()">Click Me to Hear the Apology</button>
-    <button onclick="showMessage()">Click Me to See My Message</button>
+    <p>Click the buttons to listen and see my messages.</p>
+    <button onclick="playAudio()">1- Our song </button>
+    <button onclick="showMessage()">2- My Message</button>
     <p id="message">HBIBA DYALI, I’m truly sorry for what happened yesterday between us. I promise to be better, grow with you, and fix whatever happens between US. ❤️</p>
-    <button onclick="revealSurprise()">Surprise Me!</button>
+    <button onclick="revealSurprise()">3- Surprise!</button>
     <p id="surpriseMessage" style="display:none;">I’m so grateful to have you in my life. Let’s make more beautiful memories together! ❤️</p>
 
     <audio id="myAudio">
