--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         /* Full-Screen Background Image */
         body {
             font-family: Arial, sans-serif;
-            background-image: url('background.jpg');
+            background-image: url('./background.jpg');
             background-size: cover;
             background-position: center;
             height: 100vh;
@@ -72,7 +72,7 @@
 
 <body>
     <h1>Hey Love, I'm Sorry!</h1>
-    <img src="heart.png" alt="Heart">
+    <img src="./heart.png" alt="Heart">
     <p>Click the buttons to listen and see my messages.</p>
     <button onclick="playAudio()">1- Our song </button>
     <button onclick="showMessage()">2- My Message</button>
